first draft of ethics chapter

--- a/book.bib
+++ b/book.bib
@@ -43,6 +43,52 @@ life-dates = { 1966 -  },
 catalogue-url = { https://nla.gov.au/nla.cat-vn523883 },
 }
 
+@InCollection{sep-feminist-science,
+	author       =	{Crasnow, Sharon},
+	title        =	{{Feminist Perspectives on Science}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2020/entries/feminist-science/}},
+	year         =	{2020},
+	edition      =	{{W}inter 2020},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+
+@InCollection{sep-hume-moral,
+	author       =	{Cohon, Rachel},
+	title        =	{{Hume's Moral Philosophy}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/fall2018/entries/hume-moral/}},
+	year         =	{2018},
+	edition      =	{{F}all 2018},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@InCollection{sep-ethics-deontological,
+	author       =	{Alexander, Larry and Moore, Michael},
+	title        =	{{Deontological Ethics}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2021/entries/ethics-deontological/}},
+	year         =	{2021},
+	edition      =	{{W}inter 2021},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+
+@InCollection{sep-ethics-computer,
+	author       =	{Bynum, Terrell},
+	title        =	{{Computer and Information Ethics}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2018/entries/ethics-computer/}},
+	year         =	{2018},
+	edition      =	{{S}ummer 2018},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
 @InCollection{sep-science-theory-observation,
 	author       =	{Boyd, Nora Mills and Bogen, James},
 	title        =	{{Theory and Observation in Science}},
@@ -53,6 +99,18 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn523883 },
 	edition      =	{{W}inter 2021},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
+
+@InCollection{sep-ethics-environmental,
+	author       =	{Brennan, Andrew and Lo, Norva Y. S.},
+	title        =	{{Environmental Ethics}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2022/entries/ethics-environmental/}},
+	year         =	{2022},
+	edition      =	{{S}ummer 2022},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
 
 
 @book{johansson2016philosophy,
@@ -590,4 +648,114 @@ publisher={University of Prince Edward Island}
   pages={476},
   year={2008},
   publisher={Canadian Medical Association}
+}
+
+@article{topol2018blood,
+  title={Blood, sweat and tears in biotech--the Theranos story},
+  author={Topol, Eric},
+  journal={Nature},
+  volume={557},
+  number={7706},
+  pages={306--308},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{metcalfe2013metcalfe,
+  title={Metcalfe's law after 40 years of ethernet},
+  author={Metcalfe, Bob},
+  journal={Computer},
+  volume={46},
+  number={12},
+  pages={26--31},
+  year={2013},
+  publisher={IEEE}
+}
+
+
+@article{friedman2014there,
+  title={“There are decades where nothing happens; and there are weeks where decades happen”--Vladimir Ilyich Lenin},
+  author={Friedman, Scott L},
+  journal={Journal of Hepatology},
+  volume={60},
+  number={3},
+  pages={471--472},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@misc{ai2019high,
+  title={High-level expert group on artificial intelligence},
+  author={AI, HLEG},
+  journal={Ethics guidelines for trustworthy AI},
+  pages={6},
+  year={2019},
+  publisher={European Commission. Available at: https://ec. europa. eu/digital-single~…}
+}
+
+@article{luciano2016data,
+  title={What is data ethics},
+  author={Luciano, Floridi and Mariarosaria, Taddeo},
+  journal={Phil. Trans. R. Soc. A. 37420160360},
+  year={2016}
+}
+
+
+@book{davis2012ethics,
+  title={Ethics of Big Data: Balancing risk and innovation},
+  author={Davis, Kord},
+  year={2012},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+
+@article{garcia2021need,
+  title={The need of standardised metadata to encode causal relationships: Towards safer data-driven machine learning biological solutions},
+  author={Garcia, Beatriz and Vega, Carlos and Hertel, Frank},
+  year={2021}
+}
+
+
+@article{walsh2021dome,
+  title={DOME: recommendations for supervised machine learning validation in biology},
+  author={Walsh, Ian and Fishman, Dmytro and Garcia-Gasulla, Dario and Titma, Tiina and Pollastri, Gianluca and Harrow, Jennifer and Psomopoulos, Fotis E and Tosatto, Silvio CE},
+  journal={Nature methods},
+  volume={18},
+  number={10},
+  pages={1122--1127},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@article{wilkinson2016fair,
+  title={The FAIR Guiding Principles for scientific data management and stewardship},
+  author={Wilkinson, Mark D and Dumontier, Michel and Aalbersberg, IJsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and da Silva Santos, Luiz Bonino and Bourne, Philip E and others},
+  journal={Scientific data},
+  volume={3},
+  number={1},
+  pages={1--9},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{santa2021public,
+  title={Public covid-19 x-ray datasets and their impact on model bias--a systematic review of a significant problem},
+  author={Santa Cruz, Beatriz Garcia and Bossa, Mat{\'\i}as Nicol{\'a}s and S{\"o}lter, Jan and Husch, Andreas Dominik},
+  journal={Medical image analysis},
+  volume={74},
+  pages={102225},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{dressel2018accuracy,
+  title={The accuracy, fairness, and limits of predicting recidivism},
+  author={Dressel, Julia and Farid, Hany},
+  journal={Science advances},
+  volume={4},
+  number={1},
+  pages={eaao5580},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
 }
