--- a/book.bib
+++ b/book.bib
@@ -759,3 +759,10 @@ publisher={University of Prince Edward Island}
   year={2018},
   publisher={American Association for the Advancement of Science}
 }
+
+@book{o2013doing,
+  title={Doing data science: Straight talk from the frontline},
+  author={O'Neil, Cathy and Schutt, Rachel},
+  year={2013},
+  publisher={" O'Reilly Media, Inc."}
+}
